--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,9 @@
 
     <form action="/portfolio" method="post">
         โปรตีนต่อสัปดาห์ (g):
-        <input type="number" step="0.1" name="weekly_protein" required><br><br>
+        <input type="number" step="0.1" name="weekly_protein"
+        value="{{ weekly_protein }}" required>
+
 
         จำนวนมื้อต่อวัน:
         <select name="meals_per_day">
@@ -59,10 +61,13 @@
 
         <h4>กำหนดสัดส่วน (%)</h4>
         
-        {% for food in food_analysis %}
-            {{ food.name }}
-            <input type="number" name="{{ food.name }}" min="0" max="100" value="0"> %<br><br>
-        {% endfor %}
+        {% if food_analysis %}
+            {% for food in food_analysis %}
+                {{ food.name }}
+                <input type="number" name="{{ food.name }}" min="0" max="100" value="0"> %<br><br>
+            {% endfor %}
+        {% endif %}
+
 
         <button type="submit">คำนวณ Portfolio</button>
     </form>
