--- a/templates/login.html
+++ b/templates/login.html
@@ -12,7 +12,7 @@
 
         <!-- Logo -->
         <div class="flex justify-center mb-6">
-            <img src="/static/logo.png" alt="logo" class="h-16">
+            <img src="/static/logo.png" class="h-16">
         </div>
 
         <h2 class="text-2xl font-semibold text-gray-800 mb-2 text-center">
