Switch to Postgres

--- a/templates/login.html
+++ b/templates/login.html
@@ -12,10 +12,10 @@
 
         <!-- Logo -->
         <div class="flex justify-center mb-6">
-            <img src="/static/logo.png" class="h-14" alt="Protein Planner">
+            <img src="/static/logo.png" class="h-14 mx-auto mb-2" alt="Protein Planner">
         <p class="text-xs text-gray-400 text-center">
                     Build Your Weekly Protein Plan
-                </p>
+        </p>
         </div>
                 
 
