--- a/templates/register.html
+++ b/templates/register.html
@@ -11,11 +11,11 @@
     <div class="bg-white w-full max-w-md p-10 rounded-2xl shadow-lg">
 
         <!-- Logo -->
-        <div class="flex justify-center mb-6">
-            <img src="/static/logo.png" class="h-14 mx-auto mb-2" alt="Protein Planner">
-        <p class="text-xs text-gray-400 text-center">
-                    Build Your Weekly Protein Plan
-                </p>
+        <div class="flex flex-col items-center mb-6">
+            <img src="/static/logo.png" class="h-14 mb-2" alt="Protein Planner">
+            <p class="text-xs text-gray-400 text-center">
+                Build Your Weekly Protein Plan
+            </p>
         </div>
                 
         <h2 class="text-2xl font-semibold text-gray-800 mb-2 text-center">
