Add food_engine module

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,12 @@
            Progress
         </a>
 
+        <a href="/menu-generator"
+           class="mr-3 text-sm text-gray-600 hover:text-blue-600">
+           Menu Generator
+        </a>
+
+
         <a href="/logout"
            class="text-sm text-red-500 hover:text-red-700">
            Logout
