--- a/templates/index.html
+++ b/templates/index.html
@@ -174,6 +174,17 @@
             </button>
 
         </form>
+    
+        <form action="/generate-god-mode" method="post">
+            <input type="hidden" name="calorie_target" value="{{ tdee }}">
+            <input type="hidden" name="protein_target" value="{{ daily_protein }}">
+            <input type="hidden" name="budget" value="{{ total_cost }}">
+        
+            <button class="bg-green-600 text-white px-4 py-2 rounded mt-4">
+                Generate Week Plan
+            </button>
+        </form>
+
     </div>
 
     {% endif %}
@@ -230,6 +241,22 @@
         {% endif %}
 
     </div>
+
+    <form action="/generate-from-portfolio" method="post" class="mt-6">
+
+        <input type="hidden" name="calorie_target" value="{{ tdee }}">
+        <input type="hidden" name="protein_target" value="{{ daily_protein }}">
+
+        {% for key, value in protein_split.items() %}
+            <input type="hidden" name="{{ key }}_percent" value="{{ value }}">
+        {% endfor %}
+
+        <button class="w-full bg-green-600 text-white py-3 rounded-xl hover:bg-green-700">
+            🔥 Generate Week Plan From This Portfolio
+        </button>
+
+    </form>
+
 
     {% endif %}
 
