--- a/templates/menu.html
+++ b/templates/menu.html
@@ -71,10 +71,19 @@
                         <li>{{ item.name }}</li>
                     {% endfor %}
                 </ul>
+
+                <h4>🍳 Suggested Meals</h4>
+                <ul>
+                {% for meal in day.suggested_meals %}
+                    <li>{{ meal }}</li>
+                {% endfor %}
+                </ul>
             </div>
         {% endfor %}
         </div>
     {% endif %}
+
+
 
 </div>
 
